2000-10-27  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Add borders, vertically align to the top.
	Another screenshot, this one from MURAKAMI Tomokazu.

2000-10-26  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: A flood of screenshots, Andre Bonhote, Kendrick Vargas,
	and Tenebrae.

2000-10-18  Mikhael Goikhman  <migo@homemail.com>

	* cvs.html: reverse automake & autoreconf order, some additions

2000-10-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* mod_initialization.html:
	updated documentation of number of module arguments

2000-10-04  Mikhael Goikhman  <migo@homemail.com>

	* generated/{FAQ,NEWS}.html: regenerated
	* download.html: added rpm link, currently outside of fvwm.org
	* cvs.html: small corrections

2000-09-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm-cats/index.html:
	updated pictures of kassandra and geoffrey

2000-09-07  Dan Espen  <dane@mk.telcordia.com>

	* generated/FAQ.html,generated/NEWS.html: regenerated.

2000-09-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.21

2000-07-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.20

2000-06-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.19

2000-05-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.18

2000-05-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.17

2000-04-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.16

2000-04-02  Mikhael Goikhman  <migo@homemail.com>

	* links.html: added a link to the fvwm-themes project.

2000-04-01  Dan Espen  <dane@mk.telcordia.com>

	* links.html: Remove dead and out of date links:
	Tkgoodstuff, fvwm95, Scott Boyd, Barry Warsaw, fvwm2gnome.

2000-03-31  olicha <olivier.chapuis@free.fr>

	* index.html:
	* icons.html:
	* sounds/*:
	Added some sounds distribution
