@@ -16,7 +16,7 @@ Current packages:
 Latest stable Release: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.2.4.tar.gz">2.2.4</a></li>
 
 <li>
-Latest Beta Version: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.21.tar.gz">2.3.21</a></li>
+Latest Beta Version: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.22.tar.gz">2.3.22</a></li>
 
 <li>
 Latest Alpha Versions: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/testing/">here</a></li>
