@@ -1,3 +1,8 @@
+2000-11-11  Mikhael Goikhman  <migo@homemail.com>
+
+	* download.html: increased version number to 2.3.22
+	* mod_initialization.html: updated info about module arg 3
+
 2000-10-27  Dan Espen  <dane@mk.telcordia.com>
 
 	* screenshots/index.html: Add borders, vertically align to the top.
